@@ -11,6 +11,7 @@ package me.xanium.gemseconomy.utils;
 import org.bukkit.Bukkit;
 import org.bukkit.configuration.file.YamlConfiguration;
 import org.bukkit.entity.Player;
+import org.bukkit.plugin.PluginDescriptionFile;
 import org.bukkit.plugin.RegisteredServiceProvider;
 import org.bukkit.plugin.ServicePriority;
 import org.bukkit.plugin.java.JavaPlugin;
@@ -24,6 +25,7 @@ import java.io.File;
 import java.io.IOException;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
+import java.net.URI;
 import java.net.URL;
 import java.util.*;
 import java.util.concurrent.Callable;
@@ -96,12 +98,13 @@ public class Metrics {
             config.addDefault("logFailedRequests", false);
 
             // Inform the server owners about bStats
-            config.options().header(
-                    "bStats collects some data for plugin authors like how many servers are using their plugins.\n" +
-                            "To honor their work, you should not disable it.\n" +
-                            "This has nearly no effect on the server performance!\n" +
-                            "Check out https://bStats.org/ to learn more :)"
-            ).copyDefaults(true);
+            config.options().setHeader(Arrays.asList(
+                    "bStats collects some data for plugin authors like how many servers are using their plugins.",
+                    "To honor their work, you should not disable it.",
+                    "This has nearly no effect on the server performance!",
+                    "Check out https://bStats.org/ to learn more :)"
+            ));
+            config.options().copyDefaults(true);
             try {
                 config.save(configFile);
             } catch (IOException ignored) {
@@ -176,11 +179,13 @@ public class Metrics {
      *
      * @return The plugin specific data.
      */
+    @SuppressWarnings({"unchecked", "deprecation"})
     public JSONObject getPluginData() {
         JSONObject data = new JSONObject();
 
-        String pluginName = plugin.getDescription().getName();
-        String pluginVersion = plugin.getDescription().getVersion();
+        PluginDescriptionFile description = plugin.getDescription();
+        String pluginName = description.getName();
+        String pluginVersion = description.getVersion();
 
         data.put("pluginName", pluginName); // Append the name of the plugin
         data.put("pluginVersion", pluginVersion); // Append the version of the plugin
@@ -203,6 +208,7 @@ public class Metrics {
      *
      * @return The server specific data.
      */
+    @SuppressWarnings("unchecked")
     private JSONObject getServerData() {
         // Minecraft specific data
         int playerAmount;
@@ -247,6 +253,7 @@ public class Metrics {
     /**
      * Collects the data and sends it afterwards.
      */
+    @SuppressWarnings("unchecked")
     private void submitData() {
         final JSONObject data = getServerData();
 
@@ -298,7 +305,7 @@ public class Metrics {
         if (Bukkit.isPrimaryThread()) {
             throw new IllegalAccessException("This method must not be called from the main thread!");
         }
-        HttpsURLConnection connection = (HttpsURLConnection) new URL(URL).openConnection();
+        HttpsURLConnection connection = (HttpsURLConnection) URI.create(URL).toURL().openConnection();
 
         // Compress the data to save bandwidth
         byte[] compressedData = compress(data.toString());
@@ -360,6 +367,7 @@ public class Metrics {
             this.chartId = chartId;
         }
 
+        @SuppressWarnings("unchecked")
         private JSONObject getRequestJsonObject() {
             JSONObject chart = new JSONObject();
             chart.put("chartId", chartId);
